# platform.core.appfw.ail

./: AUTHORS  CMakeLists.txt  ail.manifest  ail.pc.in  desktop.conf  desktop.conf.in
TC/unit/: Makefile  tslist  utc_ApplicationFW_ail_appinfo_get_bool_func.c  utc_ApplicationFW_ail_appinfo_get_int_func.c  utc_ApplicationFW_ail_appinfo_get_str_func.c  utc_ApplicationFW_ail_desktop_add_func.c  utc_ApplicationFW_ail_desktop_remove_func.c  utc_ApplicationFW_ail_desktop_update_func.c  utc_ApplicationFW_ail_filter_add_bool_func.c  utc_ApplicationFW_ail_filter_add_int_func.c  utc_ApplicationFW_ail_filter_add_str_func.c  utc_ApplicationFW_ail_filter_count_appinfo_func.c  utc_ApplicationFW_ail_filter_destroy_func.c  utc_ApplicationFW_ail_filter_list_appinfo_foreach_func.c  utc_ApplicationFW_ail_filter_new_func.c  utc_ApplicationFW_ail_package_destroy_appinfo_func.c  utc_ApplicationFW_ail_package_get_appinfo_func.c
debian/: changelog  control  libail-0-dev.install.in  libail-0.install.in  libail-0.postinst  rules
include/: SLP_AIL_PG.h  ail.h
initdb/: CMakeLists.txt
initdb/src/: initdb.c
packaging/: ail.changes  ail.spec
src/: ail_convert.c  ail_convert.h  ail_db.c  ail_db.h  ail_desktop.c  ail_filter.c  ail_package.c  ail_package.h  ail_private.h  ail_sql.c  ail_sql.h  ail_vconf.c  ail_vconf.h
tool/: CMakeLists.txt  CMakeLists.txt~
tool/src/: ail_desktop.c  ail_filter.c  ail_fota.c  ail_list.c  ail_package.c  createdb.c  createdb_user.c  initdb.c  initdb_user.c  main.c.head  main.c.tail  syncdb.c  syncdb_user.c
