#AIL init DB build script

SET(INITDB ail_initdb)
SET(SRCS src/initdb.c)

pkg_check_modules(INITDB_PKGS REQUIRED vconf dlog db-util sqlite3)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

STRING(REPLACE ";" " " EXTRA_CFLAGS "${INITDB_PKGS_CFLAGS}")

ADD_EXECUTABLE(${INITDB} ${SRCS})
TARGET_LINK_LIBRARIES(${INITDB} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${INITDB} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${INITDB} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${INITDB} DESTINATION ${BINDIR})
