#AIL init DB build script

SET(INITDB ail_initdb)
SET(SRCS src/initdb.c)

SET(FOTA ail_fota)
SET(FOTASRCS src/ail_fota.c)

SET(DESKTOP ail_desktop)
SET(DESKSRCS src/ail_desktop.c)

SET(FILTER ail_filter)
SET(FILTERSRCS src/ail_filter.c)

SET(PKG ail_package)
SET(PKGSRCS src/ail_package.c)

pkg_check_modules(INITDB_PKGS REQUIRED vconf dlog db-util sqlite3)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

STRING(REPLACE ";" " " EXTRA_CFLAGS "${INITDB_PKGS_CFLAGS}")

ADD_EXECUTABLE(${INITDB} ${SRCS})
TARGET_LINK_LIBRARIES(${INITDB} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${INITDB} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${INITDB} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${INITDB} DESTINATION ${BINDIR})

ADD_EXECUTABLE(${FOTA} ${FOTASRCS})
TARGET_LINK_LIBRARIES(${FOTA} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${FOTA} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${FOTA} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${FOTA} DESTINATION ${BINDIR})

ADD_EXECUTABLE(${DESKTOP} ${DESKSRCS})
TARGET_LINK_LIBRARIES(${DESKTOP} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${DESKTOP} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${DESKTOP} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${DESKTOP} DESTINATION ${BINDIR})

ADD_EXECUTABLE(${FILTER} ${FILTERSRCS})
TARGET_LINK_LIBRARIES(${FILTER} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${FILTER} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${FILTER} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${FILTER} DESTINATION ${BINDIR})

ADD_EXECUTABLE(${PKG} ${PKGSRCS})
TARGET_LINK_LIBRARIES(${PKG} ${LIBNAME} ${INITDB_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${PKG} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${PKG} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${PKG} DESTINATION ${BINDIR})